--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+    /* margin: 0; */
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,4 +23,45 @@ code {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+}
+
+ul {
+    width: 100%;
+    height: 100px;
+    margin: 0;
+    padding: 0 15px 0 20px;
+    /* margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0; */
+    overflow: scroll;
+    scroll-behavior: smooth;
+    /* border: 2px solid #000; */
+    /* box-shadow: 2px 2px 5px #000; */
+}
+
+ul::-webkit-scrollbar {
+    display: none;
+}
+
+ul li {
+    border-bottom: 1px solid #000;
+    font-size: .8rem;
+}
+
+ul li div{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: .4rem;
+    margin-bottom: 10px;
 }
