--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,19 @@
 *{
     box-sizing: border-box;
-    /* margin: 0; */
+    /* padding: 0;
+    margin: 0; */
+}
+
+:root {
+  --color-brand--1: #ffb545;
+  --color-brand--2: #00c46a;
+
+  --color-dark--0: #242a2e;
+  --color-dark--1: #2d3439;
+  --color-dark--2: #42484d;
+  --color-light--1: #aaa;
+  --color-light--2: #ececec;
+  --color-light--3: #d6dee0;
 }
 
 
